--- a/src/Asset/css/Login.css
+++ b/src/Asset/css/Login.css
@@ -41,3 +41,20 @@
     color: #ffff;
     text-decoration:none; 
 }
+
+
+
+.LoginGlobal{
+    width: 100%;
+    height:85vh ;
+    background-image: url("../logo/Capture\ d’écran\ 2021-12-28\ à\ 17.21.11.png");
+    background-repeat: no-repeat;
+    background-size: cover
+}
+
+.formLoigin{
+    margin-left: 38%;
+    padding-top: 10%;
+    text-align: center
+}
+
