--- a/src/Asset/css/Login.css
+++ b/src/Asset/css/Login.css
@@ -27,7 +27,9 @@
 .infoUser{
     /* margin-left:38%; */
     margin-top: 5%;
-    text-align: center
+    display: flex;
+    text-align: center;
+    justify-content: center;
 }
 
 .upload{
